# lora-finetune-demo

./: .gitignore  Dockerfile  README.md  generate.py  merge.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
data/: train.jsonl
src/lora_finetune/: __init__.py  data.py  evaluate.py  model.py
tests/: conftest.py  test_adapter.py  test_data.py  test_eval.py  test_grad_checkpointing.py  test_merge.py  test_model.py  test_train_step.py
