[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-finetune-demo"
version = "0.1.0"
description = "LoRA / QLoRA fine-tuning of an open causal LM with PEFT + transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.44",
  "peft>=0.12",
  "datasets>=2.20",
  "accelerate>=0.33",
]

[project.optional-dependencies]
qlora = ["bitsandbytes>=0.43"]   # 4-bit QLoRA, CUDA only
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
